@@ -1,5 +1,7 @@
 ﻿1.1.3
 Improved Prediction Breakdown calculation
+Improved display on 7" devices
+Display Reload Predictions button and message if downloaded predictions are incomplete
 
 1.1.2
 Fixed an issue when data was restricted for the app
